# knights-tour-python

./: pyproject.toml
knights_tour/: main.py
tests/: test_main.py
